crates/config/tests/snapshots/generator_test__typescript__const_enums.snap
---
source: crates/config/tests/generator_test.rs
expression: "generate(TypeScriptOptions {\n        const_enum: true,\n        enum_format: EnumFormat::Enum,\n        ..TypeScriptOptions::default()\n    })"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

export const enum BasicEnum {
	Foo,
	Bar,
	Baz,
}

export interface AnotherConfig {
	enums: BasicEnum | null;
	opt: string | null;
}

export interface GenConfig {
	boolean: boolean;
	enums: BasicEnum;
	map: Record<string, number>;
	nested: AnotherConfig;
	number: number;
	string: string;
	vector: string[];
}

