crates/config/tests/snapshots/generator_test__typescript__defaults.snap
---
source: crates/config/tests/generator_test.rs
expression: "generate(TypeScriptOptions::default())"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

export type BasicEnum = 'foo' | 'bar' | 'baz';

/** Some comment. */
export interface AnotherConfig {
	/**
	 * An optional enum.
	 *
	 * @default 'foo'
	 */
	enums: BasicEnum | null;
	/** An optional string. */
	opt: string | null;
}

export interface GenConfig {
	boolean: boolean;
	date: string;
	datetime: string;
	decimal: string;
	/** @default 'foo' */
	enums: BasicEnum;
	float32: number;
	float64: number;
	id: string;
	jsonValue: unknown;
	locator: string | null;
	map: Record<string, number>;
	nested: AnotherConfig;
	number: number;
	path: string;
	relPath: string;
	spec: string;
	specUnresolved: string;
	string: string;
	time: string;
	tomlValue: unknown | null;
	url: string | null;
	vector: string[];
	version: string | null;
	versionReq: string;
	yamlValue: unknown;
}

