crates/config/tests/snapshots/generator_test__typescript__enums.snap
---
source: crates/config/tests/generator_test.rs
expression: "generate(TypeScriptOptions {\n        enum_format: EnumFormat::Enum,\n        ..TypeScriptOptions::default()\n    })"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

export enum BasicEnum {
	Foo,
	Bar,
	Baz,
}

/** Some comment. */
export interface AnotherConfig {
	enums: BasicEnum | null;
	opt: string | null;
}

export interface GenConfig {
	boolean: boolean;
	date: string;
	datetime: string;
	decimal: string;
	enums: BasicEnum;
	float32: number;
	float64: number;
	id: string;
	locator: string | null;
	map: Record<string, number>;
	nested: AnotherConfig;
	number: number;
	path: string;
	relPath: string;
	spec: string;
	specUnresolved: string;
	string: string;
	time: string;
	url: string | null;
	vector: string[];
	version: string | null;
	versionReq: string;
}

