crates/config/tests/snapshots/generator_test__typescript__no_refs.snap
---
source: crates/config/tests/generator_test.rs
expression: "generate(TypeScriptOptions {\n        disable_references: true,\n        indent_char: \"  \".into(),\n        ..TypeScriptOptions::default()\n    })"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

export type BasicEnum = 'foo' | 'bar' | 'baz';

export interface AnotherConfig {
  enums: 'foo' | 'bar' | 'baz' | null;
  opt: string | null;
}

export interface GenConfig {
  boolean: boolean;
  date: string;
  datetime: string;
  enums: 'foo' | 'bar' | 'baz';
  id: string;
  locator: string | null;
  map: Record<string, number>;
  nested: {
    opt: string | null;
    enums: 'foo' | 'bar' | 'baz' | null;
  };
  number: number;
  path: string;
  relPath: string;
  string: string;
  time: string;
  url: string | null;
  vector: string[];
  version: string | null;
  versionReq: string;
}

