crates/config/tests/snapshots/generator_test__typescript__object_aliases.snap
---
source: crates/config/tests/generator_test.rs
expression: "generate(TypeScriptOptions {\n        object_format: ObjectFormat::Type,\n        ..TypeScriptOptions::default()\n    })"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

export type BasicEnum = 'foo' | 'bar' | 'baz';

/** Some comment. */
export type AnotherConfig = {
	enums: BasicEnum | null,
	opt: string | null,
};

export type GenConfig = {
	boolean: boolean,
	date: string,
	datetime: string,
	decimal: string,
	enums: BasicEnum,
	float32: number,
	float64: number,
	id: string,
	locator: string | null,
	map: Record<string, number>,
	nested: AnotherConfig,
	number: number,
	path: string,
	relPath: string,
	spec: string,
	specUnresolved: string,
	string: string,
	time: string,
	url: string | null,
	vector: string[],
	version: string | null,
	versionReq: string,
};

